--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,76 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  padding-left: 16px;
+  display: flex;
+  align-items: center;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  flex-shrink: 0;
+  padding: 0px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  flex: 0 0 auto;
+  padding: 12px;
+
+}
+
+.content {
+display: flex;
+flex-grow: 1;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-around;
+  padding: 32px;
+  gap: 24px;
+}
+
+ul {
+  padding: 16px;
+  margin-top: 0;
+  list-style: none;
+}
+
+li > a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+
+li {
+  padding: 0px 0px 16px;
+}
+
+#heart {
+  color: red;
 }
