--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -4,7 +4,10 @@ body, html {
 }
 
 .container {
+  display: grid;
+  grid-template: 93px 93px 465px 93px / 350px 1050px;
   text-align: center;
+  gap: 15px;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
@@ -21,18 +24,28 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-row: 1;
+  grid-column: 1 / 3;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-row: 2 / 4;
+  grid-column: 1;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-row: 2;
+  grid-column: 2;
 }
 
 .article {
   background-color: #bccbde;
+  grid-row: 3;
+  grid-column: 2;
+  display: grid;
+
 }
 
 .article p {
@@ -44,4 +57,6 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-row: 4;
+  grid-column: 1 / 3;
 }
